Graphs and model from file
Now you can choose the file with parts temperature and just draw them without calculation

--- a/Task1/FirstTask.ipynb
+++ b/Task1/FirstTask.ipynb
@@ -337,9 +337,6 @@
     "    canvas2 = FigureCanvasTkAgg(figure2, master=root)  \n",
     "    canvas2.draw()\n",
     "    canvas2.get_tk_widget().place(x=10, y=580)\n",
-    "\n",
-    "    # For model colouring according to the colorbar colours\n",
-    "    norm = matplotlib.colors.Normalize(vmin=min_temperature, vmax=max_temperature)\n",
     "    \n",
     "    # Writing parts temperatures and time to .csv file\n",
     "    data = []\n",
@@ -354,6 +351,59 @@
     "        \n",
     "        writer.writerow([total_time])\n",
     "\n",
+    "\n",
+    "def without_calculation():\n",
+    "    \n",
+    "    #.csv File Opening, Reading and Writing to Array\n",
+    "    with open(e2.get(), newline='') as f:\n",
+    "        line_array = []\n",
+    "        reader = csv.reader(f)\n",
+    "        for row in reader:\n",
+    "            line = [float(x) for x in ';'.join(row).split(';')]\n",
+    "            line_array.append(line)\n",
+    "\n",
+    "    # Time parameters from .csv file reading\n",
+    "    total_time = int(line_array[7][0])\n",
+    "    number_of_points = len(line_array[0])\n",
+    "    time = np.linspace(0, int(total_time), number_of_points)\n",
+    "    \n",
+    "    # Temperatures Graph\n",
+    "    figure1 = plt.Figure(figsize=(5,4), dpi=100)\n",
+    "    plot1 = figure1.add_subplot(111)\n",
+    "    plot1.grid(True)\n",
+    "    plot1.set_xlabel('t')\n",
+    "    plot1.set_ylabel('T_i')\n",
+    "    plot1.plot(time, line_array[0], color='red', label = \"T_1(t)\")\n",
+    "    plot1.plot(time, line_array[1], color='orange', label = \"T_2(t)\")\n",
+    "    plot1.plot(time, line_array[2], color='yellow', label = \"T_3(t)\")\n",
+    "    plot1.plot(time, line_array[3], color='green', label = \"T_4(t)\")\n",
+    "    plot1.plot(time, line_array[4], color='blue', label = \"T_5(t)\")\n",
+    "    plot1.plot(time, line_array[5], color='purple', label = \"T_6(t)\")\n",
+    "    plot1.plot(time, line_array[6], color='black', label = \"T_7(t)\")\n",
+    "    plot1.legend(bbox_to_anchor = (1, 0.6))\n",
+    "    canvas1 = FigureCanvasTkAgg(figure1, master=root)  \n",
+    "    canvas1.draw()\n",
+    "    canvas1.get_tk_widget().place(x=10, y=170)\n",
+    "    \n",
+    "    # Maximum and minimum temperatures calculation\n",
+    "    max_temperature = 0\n",
+    "    min_temperature = 100\n",
+    "    for t in range(number_of_points):\n",
+    "        for i in range(7):\n",
+    "            if (line_array[i][t] > max_temperature):\n",
+    "                max_temperature = line_array[i][t]\n",
+    "            if (line_array[i][t] < min_temperature):\n",
+    "                min_temperature = line_array[i][t]\n",
+    "    \n",
+    "    # Colorbar Picture\n",
+    "    a = np.array([[min_temperature, max_temperature]])\n",
+    "    figure2 = plt.Figure(figsize=(5,1.7))\n",
+    "    plot2 = figure2.add_subplot(111)\n",
+    "    plot2.figure.colorbar(pl.imshow(a, cmap=\"jet\"), plot2, orientation='horizontal')\n",
+    "    canvas2 = FigureCanvasTkAgg(figure2, master=root)  \n",
+    "    canvas2.draw()\n",
+    "    canvas2.get_tk_widget().place(x=10, y=580)      \n",
+    "        \n",
     "        \n",
     "def model_running():\n",
     "    scene = pywavefront.Wavefront('new_model3_1.obj', collect_faces=True)\n",
@@ -383,13 +433,17 @@
     "open_parts_temp_button.pack(expand=True)\n",
     "open_parts_temp_button.place(x=10,y=50)\n",
     "\n",
-    "run_button = ttk.Button(root, text='Run the programme', command=programme_running)\n",
+    "run_button = ttk.Button(root, text='Run the programme with new calculation', command=programme_running)\n",
     "run_button.pack(expand=True)\n",
     "run_button.place(x=10,y=130)\n",
     "\n",
+    "model_button = ttk.Button(root, text='Run the programme without calculation', command=without_calculation)\n",
+    "model_button.pack(expand=True)\n",
+    "model_button.place(x=250,y=130)\n",
+    "\n",
     "model_button = ttk.Button(root, text='Show the model', command=model_running)\n",
     "model_button.pack(expand=True)\n",
-    "model_button.place(x=160,y=130)\n",
+    "model_button.place(x=485,y=130)\n",
     "\n",
     "# Run the application\n",
     "root.mainloop()"
