--- a/Task1/FirstTask.ipynb
+++ b/Task1/FirstTask.ipynb
@@ -105,11 +105,6 @@
     "e3 = tk.Entry(width=10)\n",
     "e3.place(x=250,y=90)\n",
     "\n",
-    "text4 = tk.Label(root, text=\"Choose time moment:\") \n",
-    "text4.place(x=350,y=90)\n",
-    "e4 = tk.Entry(width=10)\n",
-    "e4.place(x=490,y=90)\n",
-    "\n",
     "# Heat functions\n",
     "def heat_flow_1(A, t): #Q_2^R\n",
     "    return A * (22 + 2 * np.sin(t/8))\n",
@@ -183,9 +178,12 @@
     "    \n",
     "    return(right_function)\n",
     "\n",
+    "# Global variable for timing\n",
+    "time_moment = 0\n",
+    "\n",
     "# Model Rendering\n",
-    "def Model(moment):\n",
-    "    \n",
+    "def Model():\n",
+    "    global time_moment\n",
     "    # Model loading and its parts detection\n",
     "    obj = model_file_loader()\n",
     "    obj.load_model('new_model3_1.obj')\n",
@@ -228,8 +226,6 @@
     "                min_temperature = line_array[i][t]\n",
     "            \n",
     "    norm = matplotlib.colors.Normalize(vmin=min_temperature, vmax=max_temperature)\n",
-    "    \n",
-    "    time_moment = int(len(line_array[0]) - 1) * moment / int(line_array[7][0])\n",
     "\n",
     "    for mesh in scene.mesh_list:\n",
     "        glBegin(GL_TRIANGLES)\n",
@@ -241,9 +237,12 @@
     "        glEnd()\n",
     "\n",
     "    glPopMatrix()\n",
+    "    \n",
+    "    if (time_moment < len(line_array[0])-1):\n",
+    "        time_moment = time_moment + 1\n",
     "\n",
     "# Model Demonstration\n",
-    "def demo(moment):\n",
+    "def demo():\n",
     "    \n",
     "        pygame.init()\n",
     "        display = (800, 600)\n",
@@ -267,14 +266,13 @@
     "                    if event.key == pygame.K_DOWN:\n",
     "                        glTranslatef(0,-1,0)\n",
     "\n",
-    "            #glRotatef(10, 1, 1, 1)\n",
     "            glClearColor(1.0, 1.0, 1.0, 0.0)   \n",
     "            glClear(GL_COLOR_BUFFER_BIT|GL_DEPTH_BUFFER_BIT)\n",
     "            \n",
     "            glEnable(GL_DEPTH_TEST);\n",
     "            glDepthFunc(GL_LESS);\n",
     "\n",
-    "            Model(moment)\n",
+    "            Model()\n",
     "            glPolygonMode(GL_FRONT_AND_BACK, GL_FILL)\n",
     "\n",
     "            pygame.display.flip()\n",
@@ -302,7 +300,7 @@
     "    ode_system_solution = odeint(ode_system, initial_conditions, time)\n",
     "    \n",
     "    # Temperatures Graph\n",
-    "    figure1 = plt.Figure(figsize=(5,4), dpi=100)\n",
+    "    figure1 = plt.Figure(figsize=(6,4), dpi=100)\n",
     "    plot1 = figure1.add_subplot(111)\n",
     "    plot1.grid(True)\n",
     "    plot1.set_xlabel('t')\n",
@@ -314,7 +312,7 @@
     "    plot1.plot(time, ode_system_solution[:,4], color='blue', label = \"T_5(t)\")\n",
     "    plot1.plot(time, ode_system_solution[:,5], color='purple', label = \"T_6(t)\")\n",
     "    plot1.plot(time, ode_system_solution[:,6], color='black', label = \"T_7(t)\")\n",
-    "    plot1.legend(bbox_to_anchor = (1, 0.6))\n",
+    "    plot1.legend(bbox_to_anchor = (0.9, 0.6))\n",
     "    canvas1 = FigureCanvasTkAgg(figure1, master=root)  \n",
     "    canvas1.draw()\n",
     "    canvas1.get_tk_widget().place(x=10, y=170)\n",
@@ -368,7 +366,7 @@
     "    time = np.linspace(0, int(total_time), number_of_points)\n",
     "    \n",
     "    # Temperatures Graph\n",
-    "    figure1 = plt.Figure(figsize=(5,4), dpi=100)\n",
+    "    figure1 = plt.Figure(figsize=(6,4), dpi=100)\n",
     "    plot1 = figure1.add_subplot(111)\n",
     "    plot1.grid(True)\n",
     "    plot1.set_xlabel('t')\n",
@@ -380,7 +378,7 @@
     "    plot1.plot(time, line_array[4], color='blue', label = \"T_5(t)\")\n",
     "    plot1.plot(time, line_array[5], color='purple', label = \"T_6(t)\")\n",
     "    plot1.plot(time, line_array[6], color='black', label = \"T_7(t)\")\n",
-    "    plot1.legend(bbox_to_anchor = (1, 0.6))\n",
+    "    plot1.legend(bbox_to_anchor = (0.9, 0.6))\n",
     "    canvas1 = FigureCanvasTkAgg(figure1, master=root)  \n",
     "    canvas1.draw()\n",
     "    canvas1.get_tk_widget().place(x=10, y=170)\n",
@@ -419,9 +417,9 @@
     "    scene_scale    = [scaled_size / max_scene_size for i in range(3)]\n",
     "    scene_trans    = [-(scene_box[1][i] + scene_box[0][i])/2 for i in range(3)]\n",
     "    \n",
-    "    moment = int(e4.get())\n",
-    "    \n",
-    "    demo(moment)\n",
+    "    global time_moment\n",
+    "    time_moment = 0\n",
+    "    demo()\n",
     "\n",
     "\n",
     "# Buttons\n",
@@ -691,7 +689,7 @@
     "total_time = 20\n",
     "number_of_points = 100\n",
     "time = np.linspace(0,total_time,number_of_points)\n",
-    "initial_conditions = np.array([20,20,20,10,20,20,20])\n",
+    "initial_conditions = np.array([20,20,20,40,20,20,20])\n",
     "ode_system_solution = odeint(ode_system, initial_conditions, time)\n",
     "\n",
     "plt.rcParams['figure.figsize'] = [10, 8]\n",
