OpenCl Verlet Algorithm is added

--- a/Task2/SecondTask.ipynb
+++ b/Task2/SecondTask.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "c844b041",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Libraries\n",
     "import numpy as np\n",
+    "import pyopencl as cl\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy.integrate import odeint\n",
     "\n",
     "# a_i = d(v_i)/dt, where body has m_i, r_i, v_i\n",
@@ -18,38 +20,52 @@
     "    \n",
     "    for j in range(masses.size):\n",
     "        if body != j:\n",
-    "            distance = positions[j] - positions[body] # r_j - r_i\n",
-    "            finalAcceleration += gravitationConstant * masses[j] * distance / np.linalg.norm([distance], 2)**3\n",
+    "            distance = positions[:, 2*j:2*j+2] - positions[:, 2*body:2*body+2] # r_j - r_i\n",
+    "            finalAcceleration += gravitationConstant * masses[j] * distance / np.linalg.norm(distance, 2)**3\n",
     "    \n",
-    "    return finalAcceleration\n",
-    "\n",
-    "\n",
+    "    return finalAcceleration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "07530500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Just Pyhton usage\n",
     "def verletAlgorythm(masses, initialPosition, initialVelocity, deltaTime, iterations):\n",
     "    times = np.arange(iterations) * deltaTime\n",
     "    \n",
-    "    positions = np.zeros((times.size, masses.size))\n",
+    "    positions = np.zeros((times.size, 2*masses.size))\n",
     "    positions[0] = initialPosition\n",
     "    \n",
-    "    velocities = np.zeros((times.size, masses.size))\n",
+    "    velocities = np.zeros((times.size, 2*masses.size))\n",
     "    velocities[0] = initialVelocity\n",
     "    \n",
-    "    currentAcceleration = np.zeros(masses.size)\n",
+    "    currentAcceleration = np.zeros(2*masses.size)\n",
     "    for i in range(masses.size):\n",
-    "        currentAcceleration[i] = acceleration(i, masses, positions[0])\n",
+    "        currentAcceleration[2*i:2*i+2] = acceleration(i, masses, positions)[0]  \n",
     "        \n",
-    "    nextAcceleration = np.zeros(masses.size)\n",
+    "    nextAcceleration = np.zeros(2*masses.size)\n",
     "\n",
     "    for j in range(iterations-1):\n",
-    "        positions[j+1] = positions[j] + velocities[j] * deltaTime + 0.5 * currentAcceleration * deltaTime**2\n",
+    "        positions[j+1,:] = positions[j,:] + velocities[j,:] * deltaTime + 0.5 * currentAcceleration * deltaTime**2\n",
     "        for i in range(masses.size):\n",
-    "            nextAcceleration[i] = acceleration(i, masses, positions[j+1])\n",
-    "        velocities[j+1] = velocities[j] + 0.5 * (currentAcceleration + nextAcceleration) * deltaTime\n",
+    "            nextAcceleration[2*i:2*i+2] = acceleration(i, masses, positions)[j]\n",
+    "        velocities[j+1,:] = velocities[j,:] + 0.5 * (currentAcceleration + nextAcceleration) * deltaTime\n",
     "        currentAcceleration = nextAcceleration\n",
     "\n",
-    "    return positions, velocities, times\n",
-    "\n",
-    "\n",
+    "    return positions, velocities, times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ba58b22d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# odeint usage\n",
     "def odeintVerletAlgorythm(masses, initialPosition, initialVelocity, deltaTime, iterations):\n",
     "    times = np.arange(iterations) * deltaTime\n",
@@ -62,23 +78,173 @@
     "    \n",
     "    def problemVelocity(x, t):\n",
     "        res = np.zeros(x.size)\n",
-    "        for i in range(x.size):\n",
-    "            res[i] = acceleration(i, masses, x)\n",
+    "        \n",
+    "        positions = np.zeros((times.size, x.size))\n",
+    "        positions[0] = x\n",
+    "        \n",
+    "        for i in range(x.size//2):\n",
+    "            res[2*i:2*i+2] = acceleration(i, masses, positions)[i]\n",
     "        return res\n",
     "\n",
     "    positions = odeint(problemPosition, initialPosition, times)\n",
     "    velocities = odeint(problemVelocity, initialVelocity, times)\n",
     "    \n",
-    "    return positions, velocities, times\n",
+    "    return positions, velocities, times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3ae9dafd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OpenCL usage\n",
+    "def openCLVerletAlgorithm(masses, initialPosition, initialVelocity, deltaTime, iterations):\n",
+    "    times = np.arange(iterations) * deltaTime\n",
+    "    \n",
+    "    ctx = cl.create_some_context()\n",
+    "    queue = cl.CommandQueue(ctx)\n",
+    "    mf = cl.mem_flags\n",
     "\n",
+    "    openCLMasses = np.array(masses, dtype=np.float64)\n",
+    "    massesBuffer = cl.Buffer(ctx, mf.READ_ONLY | mf.COPY_HOST_PTR, hostbuf=openCLMasses)\n",
+    "    \n",
+    "    openCLInitialPosition = np.array(initialPosition, dtype=np.float64)\n",
+    "    initialPositionBuffer = cl.Buffer(ctx, mf.READ_ONLY | mf.COPY_HOST_PTR, hostbuf=openCLInitialPosition)\n",
+    "    \n",
+    "    openCLInitialVelocity = np.array(initialVelocity, dtype=np.float64)\n",
+    "    initialVelocityBuffer = cl.Buffer(ctx, mf.READ_ONLY | mf.COPY_HOST_PTR, hostbuf=openCLInitialVelocity)\n",
+    "    \n",
+    "    openCLDeltaTime = np.array(deltaTime, dtype=np.float64)\n",
+    "    deltaTimeBuffer = cl.Buffer(ctx, mf.READ_ONLY | mf.COPY_HOST_PTR, hostbuf=openCLDeltaTime)\n",
+    "        \n",
+    "    openCLIterations = np.array(iterations, dtype=np.int64)\n",
+    "    iterationsBuffer = cl.Buffer(ctx, mf.READ_ONLY | mf.COPY_HOST_PTR, hostbuf=openCLIterations)\n",
+    "     \n",
+    "    openCLPosition = np.zeros((times.size, initialPosition.size), dtype=np.float64)\n",
+    "    positionBuffer = cl.Buffer(ctx, mf.WRITE_ONLY, openCLPosition.nbytes)\n",
+    "    \n",
+    "    openCLVelocity = np.zeros((times.size, initialVelocity.size), dtype=np.float64)\n",
+    "    velocityBuffer = cl.Buffer(ctx, mf.WRITE_ONLY, openCLVelocity.nbytes)\n",
+    "    \n",
+    "    openCLBodiesNumber = np.array(masses.size, dtype=np.int64)\n",
+    "    bodiesNumberBuffer = cl.Buffer(ctx, mf.READ_ONLY | mf.COPY_HOST_PTR, hostbuf=openCLBodiesNumber)\n",
+    "    \n",
+    "    openCLAccelerations = np.zeros((times.size, initialPosition.size), dtype=np.float64)\n",
+    "    accelerationsBuffer = cl.Buffer(ctx, mf.WRITE_ONLY, openCLAccelerations.nbytes)\n",
+    "        \n",
+    "    openCLTemporaryArray = np.zeros(2, dtype=np.float64)\n",
+    "    temporaryArrayBuffer = cl.Buffer(ctx, mf.WRITE_ONLY, openCLTemporaryArray.nbytes)\n",
+    "    \n",
+    "    prg = cl.Program(ctx,\n",
+    "                     \"\"\"\n",
+    "                     void acceleration(__global float *positions, __global float *openCLMasses, __global double *openCLAccelerations, __global double *openCLTemporaryArray, int bodiesNumber, int body, int time)\n",
+    "                     {\n",
+    "                         double gravitationConstant = 6.67408;\n",
+    "                         double norm = 0.0;\n",
+    "                         double distance = 0.0;\n",
+    "                         int shift = time * 2;\n",
+    "                         \n",
+    "                         for (int d = 0; d < 2 * bodiesNumber; d++)\n",
+    "                         {\n",
+    "                             openCLAccelerations[shift + d] = 0.0;\n",
+    "                         }\n",
+    "                               \n",
+    "                         for (int j = 0; j < bodiesNumber; j++)\n",
+    "                         {\n",
+    "                                 norm = 0.0; \n",
+    "                                 \n",
+    "                                 if (body != j)\n",
+    "                                 {\n",
+    "                                   \n",
+    "                                    \n",
+    "                                    for (int d = 0; d < 2; d++)\n",
+    "                                    {\n",
+    "                                        distance = positions[shift + j*2 + d] - positions[shift + body*2 + d];\n",
+    "                                        norm += (distance * distance);\n",
+    "                                        openCLTemporaryArray[d] = gravitationConstant * openCLMasses[j] * distance;\n",
+    "                                        \n",
+    "                                    }\n",
+    "                                    \n",
+    "                                    norm = pow(norm, 1.5);\n",
+    "                                    \n",
+    "                                    for (int d = 0; d < 2; d++)\n",
+    "                                    {\n",
+    "                                        if (norm != 0)\n",
+    "                                        {\n",
+    "                                            openCLAccelerations[shift + body*2 + d] += openCLTemporaryArray[d] / norm;\n",
+    "                                        }\n",
+    "                                    }   \n",
+    "                                 }\n",
+    "                                 \n",
+    "                            }\n",
+    "                                                \n",
+    "                     }\n",
+    "                     \n",
+    "                     __kernel void verletAlgorithm(__global float *openCLMasses, __global float *openCLInitialPosition, __global float *openCLInitialVelocity,  __global float *openCLDeltaTime, __global int *openCLIterations, __global float *openCLPosition, __global float *openCLVelocity, __global int *openCLBodiesNumber, __global float *openCLAccelerations, __global float *openCLTemporaryArray)\n",
+    "                     {\n",
+    "                        int bodiesNumber = *openCLBodiesNumber, iterations = *openCLIterations;\n",
+    "                        float deltaTime = *openCLDeltaTime;\n",
+    "                        int shift = bodiesNumber * 2;\n",
+    "                        \n",
+    "                        for (int coordinate = 0; coord < bodiesNumber * 2; coordinate++)\n",
+    "                        {\n",
+    "                            openCLPosition[coordinate] = openCLInitialPosition[coordinate];\n",
+    "                            openCLVelocity[coordinate] = openCLInitialVelocity[coordinate];\n",
+    "                        }\n",
+    "                        \n",
+    "                        for (int j = 0; j < bodiesNumber; j++)\n",
+    "                        {\n",
+    "                            acceleration(openCLPosition, openCLMasses, openCLAccelerations, openCLTemporaryArray, bodiesNumber, j, 0);\n",
+    "                        }\n",
+    "                        \n",
+    "                        for (int t = 0; t < iterations; t++)\n",
+    "                        {\n",
+    "                        \n",
+    "                            for (int n = 0; n < bodiesNumber; n++)\n",
+    "                            {\n",
+    "                                for (int d = 0; d < 2; d++)\n",
+    "                                {\n",
+    "                                    openCLPosition[(t+1)*shift + n*2 + d] = openCLPosition[t*shift + n*2 + d] + openCLVelocity[t*shift + n*2 + d] * deltaTime + 0.5 * openCLAccelerations[t*shift + n*2 + d] * deltaTime * deltaTime;\n",
+    "                                }\n",
+    "                            }\n",
+    "                            \n",
+    "                            for (int j = 0; j < bodiesNumber; j++)\n",
+    "                            {\n",
+    "                                acceleration(openCLPosition, openCLMasses, openCLAccelerations, openCLTemporaryArray, bodiesNumber, j, t+1);\n",
+    "                            }\n",
+    "                            \n",
+    "                            for (int n = 0; n < bodiesNumber; n++)\n",
+    "                            {\n",
+    "                                for (int d = 0; d < 2; d++)\n",
+    "                                {\n",
+    "                                    openCLVelocity[(t+1)*shift + n*2 + d] = openCLVelocity[t*shift + n*2 + d] + 0.5 * (openCLAccelerations[n*2 + d] + openCLAccelerations[shift + n*2 + d]) * deltaTime; \n",
+    "                                }\n",
+    "                            }\n",
+    " \n",
+    "                        }\n",
+    "                     }\n",
+    "                     \"\"\")\n",
+    "    try:\n",
+    "        prg.build()\n",
+    "    except:\n",
+    "        print(\"Error:\")\n",
+    "        print(prg.get_build_info(ctx.devices[0], cl.program_build_info.LOG))\n",
+    "        raise\n",
     "\n",
-    "\n"
+    "    prg.verletAlgorithm(queue, (1,), None, massesBuffer, initialPositionBuffer, initialVelocityBuffer, deltaTimeBuffer, iterationsBuffer, positionBuffer, velocityBuffer, bodiesNumberBuffer, accelerationsBuffer, temporaryArrayBuffer)\n",
+    "    \n",
+    "    cl.enqueue_copy(queue, positionBuffer, openCLPosition)\n",
+    "    cl.enqueue_copy(queue, velocityBuffer, openCLVelocity)\n",
+    "    \n",
+    "    return openCLPosition, openCLVelocity, times"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc5c9db5",
+   "id": "4a4fb2ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,7 +252,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a12aceae",
+   "id": "5ae683e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "116c6281",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa49a96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "701455da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583c75bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2faa20f",
    "metadata": {},
    "outputs": [],
    "source": []
