Multiprocessing and Cython are added

--- a/Task2/SecondTask.ipynb
+++ b/Task2/SecondTask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "c844b041",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,8 @@
     "import numpy as np\n",
     "import pyopencl as cl\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import multiprocessing as mp\n",
     "from scipy.integrate import odeint\n",
     "\n",
     "# a_i = d(v_i)/dt, where body has m_i, r_i, v_i\n",
@@ -23,12 +25,28 @@
     "            distance = positions[:, 2*j:2*j+2] - positions[:, 2*body:2*body+2] # r_j - r_i\n",
     "            finalAcceleration += gravitationConstant * masses[j] * distance / np.linalg.norm(distance, 2)**3\n",
     "    \n",
+    "    return finalAcceleration\n",
+    "\n",
+    "\n",
+    "# The same function as above, but without numpy operations with arrays\n",
+    "def accelerationWithoutNumpy(body, masses, positions):\n",
+    "    gravitationConstant = 6.67408e-11\n",
+    "    finalAcceleration = 0\n",
+    "    \n",
+    "    distance = np.zeros(2)\n",
+    "    \n",
+    "    for j in range(masses.size):\n",
+    "        if body != j:\n",
+    "            for d in range(2):\n",
+    "                distance[d] = positions[2*j+d] - positions[2*body+d] # r_j - r_i\n",
+    "                finalAcceleration += gravitationConstant * masses[j] * distance / np.linalg.norm(distance, 2)**3\n",
+    "    \n",
     "    return finalAcceleration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "07530500",
    "metadata": {},
    "outputs": [],
@@ -61,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "ba58b22d",
    "metadata": {},
    "outputs": [],
@@ -94,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "3ae9dafd",
    "metadata": {},
    "outputs": [],
@@ -243,11 +261,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4a4fb2ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Multiprocessing usage\n",
+    "def MultiprocessingVerletAlgorithm(masses, initialPosition, initialVelocity, deltaTime, iterations): \n",
+    "    global verlet\n",
+    "    \n",
+    "    def verlet(queue, resultQueue, initialVelocity, sharedMemoryPositions, body, events1, events2):\n",
+    "        \n",
+    "        currentPosition = np.array(sharedMemoryPositions[body*2:(body+1)*2])\n",
+    "        currentAcceleration = accelerationWithoutNumpy(body, masses, sharedMemoryPositions)\n",
+    "\n",
+    "        resultPosition = np.empty((iterations, 2))\n",
+    "        resultVelocity = np.empty((iterations, 2))\n",
+    "        \n",
+    "        resultPosition[0, :] = currentPosition\n",
+    "        resultVelocity[0, :] = initialVelocity[body*2:(body+1)*2]\n",
+    "    \n",
+    "        for j in range(iterations - 1):\n",
+    "\n",
+    "            resultPosition[j+1, :] = currentPosition + resultVelocity[j, :] * deltaTime + 0.5 * currentAcceleration * deltaTime**2\n",
+    "\n",
+    "            queue.put([body, resultPosition[j+1, :]])\n",
+    "            \n",
+    "            events1[body].set()\n",
+    "\n",
+    "            if body == 0:\n",
+    "                for i in range(masses.size):\n",
+    "                    events1[i].wait()\n",
+    "                    events1[i].clear()\n",
+    "                    \n",
+    "                for i in range(masses.size):\n",
+    "                    gettingFromQueue = queue.get()\n",
+    "                    sharedMemoryPositions[gettingFromQueue[0]*2:(gettingFromQueue[0]+1)*2] = gettingFromQueue[1]\n",
+    "                    \n",
+    "                for i in range(masses.size):\n",
+    "                    events2[i].set()\n",
+    "            else:\n",
+    "                events2[body].wait()\n",
+    "                events2[body].clear()\n",
+    "\n",
+    "            currentPosition = np.array(sharedMemoryPositions[body*2:(body + 1)*2])\n",
+    "            \n",
+    "            nextAcceleration = accelerationWithoutNumpy(body, masses, sharedMemoryPositions)\n",
+    "\n",
+    "            resultVelocity[j+1, :] = resultVelocity[j, :] + 0.5 * (currentAcceleration + nextAcceleration) * deltaTime\n",
+    "            \n",
+    "            currentAcceleration = nextAcceleration\n",
+    "            \n",
+    "        resultQueue.put([body, resultPosition, resultVelocity])\n",
+    "\n",
+    "    \n",
+    "    if __name__ == '__main__':\n",
+    "        times = np.arange(iterations) * deltaTime\n",
+    "        \n",
+    "        events1 = []\n",
+    "        events2 = []\n",
+    "        processes = []\n",
+    "        \n",
+    "        positions = np.zeros((times.size, 2*masses.size))\n",
+    "        velocities = np.zeros((times.size, 2*masses.size))\n",
+    "        \n",
+    "        sharedMemoryPositions = mp.Array('d', initialPosition)\n",
+    "\n",
+    "        for body in masses:\n",
+    "            events1.append(mp.Event())\n",
+    "            events2.append(mp.Event())\n",
+    "            events1[-1].clear()\n",
+    "            events2[-1].clear()\n",
+    "\n",
+    "        queue = mp.Queue()\n",
+    "        resultQueue = mp.Queue()\n",
+    "        \n",
+    "        for body in range(masses.size):\n",
+    "            processes.append(mp.Process(target=verlet, args=(queue, resultQueue, initialVelocity, sharedMemoryPositions, body, events1, events2)))\n",
+    "            processes[-1].start()\n",
+    "\n",
+    "        for i in range(masses.size):\n",
+    "            gettingFromQueue = resultQueue.get()\n",
+    "            positions[:, gettingFromQueue[0]*2:(gettingFromQueue[0]+1)*2] = gettingFromQueue[1]\n",
+    "            velocities[:, gettingFromQueue[0]*2:(gettingFromQueue[0]+1)*2] = gettingFromQueue[2]\n",
+    "\n",
+    "        for process in processes:\n",
+    "            process.join()\n",
+    "\n",
+    "        return positions, velocities, times"
+   ]
   },
   {
    "cell_type": "code",
