Random particles generation and methods comparison

--- a/Task2/SecondTask.ipynb
+++ b/Task2/SecondTask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "c844b041",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import multiprocessing as mp\n",
+    "import cyt\n",
     "from scipy.integrate import odeint\n",
     "\n",
     "# a_i = d(v_i)/dt, where body has m_i, r_i, v_i\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "07530500",
    "metadata": {},
    "outputs": [],
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "ba58b22d",
    "metadata": {},
    "outputs": [],
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "3ae9dafd",
    "metadata": {},
    "outputs": [],
@@ -180,7 +181,7 @@
     "                                    for (int d = 0; d < 2; d++)\n",
     "                                    {\n",
     "                                        distance = positions[shift + j*2 + d] - positions[shift + body*2 + d];\n",
-    "                                        norm += (distance * distance);\n",
+    "                                        norm += pown(distance, 2);\n",
     "                                        openCLTemporaryArray[d] = gravitationConstant * openCLMasses[j] * distance;\n",
     "                                        \n",
     "                                    }\n",
@@ -206,7 +207,7 @@
     "                        float deltaTime = *openCLDeltaTime;\n",
     "                        int shift = bodiesNumber * 2;\n",
     "                        \n",
-    "                        for (int coordinate = 0; coord < bodiesNumber * 2; coordinate++)\n",
+    "                        for (int coordinate = 0; coordinate < bodiesNumber * 2; coordinate++)\n",
     "                        {\n",
     "                            openCLPosition[coordinate] = openCLInitialPosition[coordinate];\n",
     "                            openCLVelocity[coordinate] = openCLInitialVelocity[coordinate];\n",
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "4a4fb2ea",
    "metadata": {},
    "outputs": [],
@@ -353,11 +354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5ae683e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def VerletAlgorithmMethods(method, masses, initialPosition, initialVelocity, deltaTime, iterations):\n",
+    "    \n",
+    "    methods = {0: odeintVerletAlgorythm,\n",
+    "               1: verletAlgorythm,\n",
+    "               2: MultiprocessingVerletAlgorithm,\n",
+    "               3: cyt.cythonVerletAlgorithm,\n",
+    "               4: openCLVerletAlgorithm}\n",
+    "    \n",
+    "    return methods[method](masses, initialPosition, initialVelocity, deltaTime, iterations)"
+   ]
   },
   {
    "cell_type": "code",
