Better performance of all existing functions

--- a/Task2/SecondTask.ipynb
+++ b/Task2/SecondTask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "c844b041",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "07530500",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "ba58b22d",
    "metadata": {},
    "outputs": [],
@@ -113,13 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "3ae9dafd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# OpenCL usage\n",
     "def openCLVerletAlgorithm(masses, initialPosition, initialVelocity, deltaTime, iterations):\n",
+    "    os.environ['PYOPENCL_CTX'] = '0'\n",
+    "    os.environ['PYOPENCL_COMPILER_OUTPUT'] = '1'\n",
+    "    \n",
     "    times = np.arange(iterations) * deltaTime\n",
     "    \n",
     "    ctx = cl.create_some_context()\n",
@@ -158,11 +161,11 @@
     "    \n",
     "    prg = cl.Program(ctx,\n",
     "                     \"\"\"\n",
-    "                     void acceleration(__global float *positions, __global float *openCLMasses, __global double *openCLAccelerations, __global double *openCLTemporaryArray, int bodiesNumber, int body, int time)\n",
+    "                     void acceleration(__global float *positions, __global float *openCLMasses, __global float *openCLAccelerations, __global float *openCLTemporaryArray, int bodiesNumber, int body, int time)\n",
     "                     {\n",
-    "                         double gravitationConstant = 6.67408;\n",
-    "                         double norm = 0.0;\n",
-    "                         double distance = 0.0;\n",
+    "                         float gravitationConstant = 6.67408;\n",
+    "                         float norm = 0.0;\n",
+    "                         float distance = 0.0;\n",
     "                         int shift = time * 2;\n",
     "                         \n",
     "                         for (int d = 0; d < 2 * bodiesNumber; d++)\n",
@@ -186,7 +189,7 @@
     "                                        \n",
     "                                    }\n",
     "                                    \n",
-    "                                    norm = pow(norm, 1.5);\n",
+    "                                    norm = pow(norm, 1.5f);\n",
     "                                    \n",
     "                                    for (int d = 0; d < 2; d++)\n",
     "                                    {\n",
@@ -225,7 +228,7 @@
     "                            {\n",
     "                                for (int d = 0; d < 2; d++)\n",
     "                                {\n",
-    "                                    openCLPosition[(t+1)*shift + n*2 + d] = openCLPosition[t*shift + n*2 + d] + openCLVelocity[t*shift + n*2 + d] * deltaTime + 0.5 * openCLAccelerations[t*shift + n*2 + d] * deltaTime * deltaTime;\n",
+    "                                    openCLPosition[(t+1)*shift + n*2 + d] = openCLPosition[t*shift + n*2 + d] + openCLVelocity[t*shift + n*2 + d] * deltaTime + 0.5 * openCLAccelerations[t*shift + n*2 + d] * pown(deltaTime,2);\n",
     "                                }\n",
     "                            }\n",
     "                            \n",
@@ -254,15 +257,15 @@
     "\n",
     "    prg.verletAlgorithm(queue, (1,), None, massesBuffer, initialPositionBuffer, initialVelocityBuffer, deltaTimeBuffer, iterationsBuffer, positionBuffer, velocityBuffer, bodiesNumberBuffer, accelerationsBuffer, temporaryArrayBuffer)\n",
     "    \n",
-    "    cl.enqueue_copy(queue, positionBuffer, openCLPosition)\n",
-    "    cl.enqueue_copy(queue, velocityBuffer, openCLVelocity)\n",
+    "    cl.enqueue_copy(queue, positionBuffer, openCLPosition).wait()\n",
+    "    cl.enqueue_copy(queue, velocityBuffer, openCLVelocity).wait()\n",
     "    \n",
     "    return openCLPosition, openCLVelocity, times"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "4a4fb2ea",
    "metadata": {},
    "outputs": [],
@@ -354,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "5ae683e1",
    "metadata": {},
    "outputs": [],
