--- a/Task2/Comparison.ipynb
+++ b/Task2/Comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "a07e5a38",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "12f8f97e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "5fbe3100",
    "metadata": {},
    "outputs": [],
@@ -73,22 +73,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "81df8b27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51\n",
+      "12.913279136021933\n",
+      "0.0\n",
+      "2.930194934209188\n",
+      "0.8775580724080404\n"
+     ]
+    }
+   ],
    "source": [
-    "m, p, v, t = particlesGeneration(50)\n",
-    "print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
-    "\n",
-    "m, p, v, t = particlesGeneration(50)\n",
-    "print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
-    "\n",
-    "m, p, v, t = particlesGeneration(50)\n",
-    "print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
-    "\n",
-    "m, p, v, t = particlesGeneration(50)\n",
-    "print(timeToSolve(4, 3, m, p, v, t / 100, 100))"
+    "def main():\n",
+    "    m, p, v, t = particlesGeneration(50)\n",
+    "    print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
+    "    print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
+    "    print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
+    "    print(timeToSolve(4, 3, m, p, v, t / 100, 100))\n",
+    "    \n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
@@ -99,16 +110,16 @@
    "outputs": [],
    "source": [
     "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(1, 3, m, p, v, t / 10, 10))\n",
+    "print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
     "\n",
     "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(2, 3, m, p, v, t / 10, 10))\n",
+    "print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
     "\n",
     "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(3, 3, m, p, v, t / 10, 10))\n",
+    "print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
     "\n",
     "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(4, 3, m, p, v, t / 10, 10))"
+    "print(timeToSolve(4, 3, m, p, v, t / 100, 100))"
    ]
   },
   {
@@ -119,16 +130,16 @@
    "outputs": [],
    "source": [
     "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(1, 3, m, p, v, t / 10, 10))\n",
+    "print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
     "\n",
     "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(2, 3, m, p, v, t / 10, 10))\n",
+    "print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
     "\n",
     "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(3, 3, m, p, v, t / 10, 10))\n",
+    "print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
     "\n",
     "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(4, 3, m, p, v, t / 10, 10))"
+    "print(timeToSolve(4, 3, m, p, v, t / 100, 100))"
    ]
   },
   {
