--- a/Task2/Comparison.ipynb
+++ b/Task2/Comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "id": "a07e5a38",
    "metadata": {},
    "outputs": [],
@@ -15,25 +15,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "id": "12f8f97e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def timeToSolve(method, launchesNumber, masses, initialPosition, initialVelocity, deltaTime, iterations):\n",
-    "    t = 0\n",
-    "    \n",
-    "    for i in range(launchesNumber):\n",
-    "        startTime = time.time()\n",
-    "        st.VerletAlgorithmMethods(method, masses, initialPosition, initialVelocity, deltaTime, iterations)\n",
-    "        t += time.time() - startTime\n",
+    "    if (method != 2):\n",
+    "        t = 0\n",
+    "            \n",
+    "        for i in range(launchesNumber):\n",
+    "            startTime = time.time()\n",
+    "            st.VerletAlgorithmMethods(method, masses, initialPosition, initialVelocity, deltaTime, iterations)\n",
+    "            t += time.time() - startTime\n",
     "        \n",
-    "    return t / launchesNumber"
+    "        return t / launchesNumber\n",
+    "    else:\n",
+    "        st.MultiprocessingVerletAlgorithm(masses, initialPosition, initialVelocity, deltaTime, iterations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "id": "5fbe3100",
    "metadata": {},
    "outputs": [],
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "id": "81df8b27",
    "metadata": {},
    "outputs": [
@@ -81,25 +84,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51\n",
-      "12.913279136021933\n",
-      "0.0\n",
-      "2.930194934209188\n",
-      "0.8775580724080404\n"
+      "6.157466967900594\n",
+      "1.406149943669637\n",
+      "0.4154728253682454\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    m, p, v, t = particlesGeneration(50)\n",
-    "    print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
-    "    print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
-    "    print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
-    "    print(timeToSolve(4, 3, m, p, v, t / 100, 100))\n",
+    "    print(timeToSolve(1, 3, m, p, v, t / 50, 50))\n",
+    "    st.MultiprocessingVerletAlgorithm(m, p, v, t / 50, 50)\n",
+    "    print(timeToSolve(3, 3, m, p, v, t / 50, 50))\n",
+    "    print(timeToSolve(4, 3, m, p, v, t / 50, 50))\n",
     "    \n",
-    "    \n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "\n",
+    "main()"
    ]
   },
   {
@@ -109,17 +109,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
+    "# m, p, v, t = particlesGeneration(100)\n",
+    "# print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
     "\n",
-    "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
+    "# m, p, v, t = particlesGeneration(100)\n",
+    "# print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
     "\n",
-    "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
+    "# m, p, v, t = particlesGeneration(100)\n",
+    "# print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
     "\n",
-    "m, p, v, t = particlesGeneration(100)\n",
-    "print(timeToSolve(4, 3, m, p, v, t / 100, 100))"
+    "# m, p, v, t = particlesGeneration(100)\n",
+    "# print(timeToSolve(4, 3, m, p, v, t / 100, 100))"
    ]
   },
   {
@@ -129,17 +129,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
+    "# m, p, v, t = particlesGeneration(200)\n",
+    "# print(timeToSolve(1, 3, m, p, v, t / 100, 100))\n",
     "\n",
-    "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
+    "# m, p, v, t = particlesGeneration(200)\n",
+    "# print(timeToSolve(2, 3, m, p, v, t / 100, 100))\n",
     "\n",
-    "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
+    "# m, p, v, t = particlesGeneration(200)\n",
+    "# print(timeToSolve(3, 3, m, p, v, t / 100, 100))\n",
     "\n",
-    "m, p, v, t = particlesGeneration(200)\n",
-    "print(timeToSolve(4, 3, m, p, v, t / 100, 100))"
+    "# m, p, v, t = particlesGeneration(200)\n",
+    "# print(timeToSolve(4, 3, m, p, v, t / 100, 100))"
    ]
   },
   {
